<resources>
    <string name="app_name">sugar-bio-saveetha</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="set_up_your_profile_string">Set Up Your Profile</string>
    <string name="male_string">Male</string>
    <string name="_70kg_string">70kg</string>
    <string name="_18_10_00_string">18-10-00</string>
    <string name="_7_4__string">7.4"</string>
    <string name="gender_string">Gender</string>
    <string name="weight_string">Weight</string>
    <string name="birthday_string">Birthday</string>
    <string name="height_string">Height</string>
    <string name="next_string">Next</string>
</resources>
